testdata/baselines/reference/submodule/conformance/jsdocTypeReferenceToImportOfClassExpression.errors.txt
MW.js(8,10): error TS2339: Property 'compiler' does not exist on type 'MW'.


==== MC.js (0 errors) ====
    const MW = require("./MW");
    
    /** @typedef {number} Cictema */
    
    module.exports = class MC {
      watch() {
        return new MW(this);
      }
    };
    
==== MW.js (1 errors) ====
    /** @typedef {import("./MC")} MC */
    
    class MW {
      /**
       * @param {MC} compiler the compiler
       */
      constructor(compiler) {
        this.compiler = compiler;
             ~~~~~~~~
!!! error TS2339: Property 'compiler' does not exist on type 'MW'.
      }
    }
    
    module.exports = MW;
    